manifests/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding-svc
spec:
  type: ClusterIP
  selector:
    app: linkding
  ports:
    - port: 80
      targetPort: 9090
